--- a/angular.json
+++ b/angular.json
@@ -55,7 +55,13 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ],
-              "outputHashing": "all"
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": true,
+              "namedChunks": true,
+              "extractLicenses": true,
+              "vendorChunk": true,
+              "buildOptimizer": true
             },
             "development": {
               "buildOptimizer": false,
@@ -107,5 +113,8 @@
       }
     }
   },
-  "defaultProject": "product-catalog"
+  "defaultProject": "product-catalog",
+  "cli": {
+    "analytics": false
+  }
 }
